--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Car Landing Page</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="champ.js"></script>
+    <script src="/champ.js"></script>
   </head>
 
   <body>
@@ -680,6 +680,6 @@
       </p>
     </footer>
 
-    <script src="Main-desktop-script.js"></script>
+    <script src="/Main-desktop-script.js"></script>
   </body>
 </html>
